--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <center><h1>Resume</h1></center>
   <table cellspacing="20">
     <tr>
-      <td><img src="C:\Users\SRI HARSHITA TATA\Desktop\Web dev-udemy\Atom web dev\HTML- Personal Site\Harshita pic.png" alt="Harshita Profile Picture"></td>
+      <td><img src="Harshita pic.png" alt="Harshita Profile Picture"></td>
       <td><h1>Sri Harshita Tata</h1>
       <p><strong>IT professional with 3.5 years</strong> of experience in Software development specializing web technologies like JavaScript, Angular js, React js, HTML, CSS, Bootstrap, and Networking domain. </p>
       <p><strong>Click Here: </strong><a href="Contact Info.html">Contact Information</a></p></td>
